# instagram-scraper

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
scripts/: run_scraper.py  setup.py
src/instagram_scraper/: __init__.py  main.py
src/instagram_scraper/api/: routes.py
src/instagram_scraper/config/: __init__.py  settings.py
src/instagram_scraper/models/: __init__.py  media.py  post.py  profile.py
src/instagram_scraper/scrapers/: __init__.py  base.py  media.py  posts.py  profile.py
src/instagram_scraper/utils/: headers.py  parser.py  proxies.py
tests/: test_api.py  test_scrappers.py
web/: index.html  script.js  style.css
